// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CSS/Table Basic 1`] = `
<div>
  <table>
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Item Name
        </th>
        <th>
          Item Price
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Alvin
        </td>
        <td>
          Eclair
        </td>
        <td>
          $0.87
        </td>
      </tr>
      <tr>
        <td>
          Alan
        </td>
        <td>
          Jellybean
        </td>
        <td>
          $3.76
        </td>
      </tr>
      <tr>
        <td>
          Jonathan
        </td>
        <td>
          Lollipop
        </td>
        <td>
          $7.00
        </td>
      </tr>
      <tr>
        <td>
          Shannon
        </td>
        <td>
          KitKat
        </td>
        <td>
          $9.99
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots CSS/Table Centered Table 1`] = `
<div>
  <table
    className="centered"
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Item Name
        </th>
        <th>
          Item Price
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Alvin
        </td>
        <td>
          Eclair
        </td>
        <td>
          $0.87
        </td>
      </tr>
      <tr>
        <td>
          Alan
        </td>
        <td>
          Jellybean
        </td>
        <td>
          $3.76
        </td>
      </tr>
      <tr>
        <td>
          Jonathan
        </td>
        <td>
          Lollipop
        </td>
        <td>
          $7.00
        </td>
      </tr>
      <tr>
        <td>
          Shannon
        </td>
        <td>
          KitKat
        </td>
        <td>
          $9.99
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots CSS/Table Highlight Table 1`] = `
<div>
  <table
    className="highlight"
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Item Name
        </th>
        <th>
          Item Price
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Alvin
        </td>
        <td>
          Eclair
        </td>
        <td>
          $0.87
        </td>
      </tr>
      <tr>
        <td>
          Alan
        </td>
        <td>
          Jellybean
        </td>
        <td>
          $3.76
        </td>
      </tr>
      <tr>
        <td>
          Jonathan
        </td>
        <td>
          Lollipop
        </td>
        <td>
          $7.00
        </td>
      </tr>
      <tr>
        <td>
          Shannon
        </td>
        <td>
          KitKat
        </td>
        <td>
          $9.99
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots CSS/Table Responsive Table 1`] = `
<div>
  <table
    className="responsive-table"
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Item Name
        </th>
        <th>
          Item Price
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Alvin
        </td>
        <td>
          Eclair
        </td>
        <td>
          $0.87
        </td>
      </tr>
      <tr>
        <td>
          Alan
        </td>
        <td>
          Jellybean
        </td>
        <td>
          $3.76
        </td>
      </tr>
      <tr>
        <td>
          Jonathan
        </td>
        <td>
          Lollipop
        </td>
        <td>
          $7.00
        </td>
      </tr>
      <tr>
        <td>
          Shannon
        </td>
        <td>
          KitKat
        </td>
        <td>
          $9.99
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
